--- a/index.html
+++ b/index.html
@@ -141,27 +141,20 @@
           <div><p class="text-5xl font-black accent-gold">ISO & PCI</p><p class="text-lg">Global Compliance</p></div>
         </div>
 
-        <!-- Carousel -->
+        <!-- Carousel (one slide visible at a time) -->
         <div id="testimonial-carousel" class="relative max-w-3xl mx-auto bg-white/10 rounded-lg p-8 overflow-hidden">
           <div class="testimonial-slide">
-            <p class="text-lg italic mb-3">"Sivan's ability to translate strategic chaos into a clear action plan was a game-changer for us. Within 6 months, we reduced churn by 15%."</p>
-            <p class="font-bold">- CEO, B2B SaaS Company</p>
+            <p class="text-lg italic mb-1">"Sivan's ability to translate strategic chaos into a clear action plan was a game-changer for us. Within 6 months, we reduced churn by 15%."</p>
+          </div>
+          <!-- Removed the second review per request -->
+          <div class="testimonial-slide hidden">
+            <p class="text-lg italic mb-1">"Sivan is an excellent product manager, product leader and team member. He cares passionately about delighting customers and is highly capable at all levels from strategic direction to writing detailed…"</p>
           </div>
           <div class="testimonial-slide hidden">
-            <p class="text-lg italic mb-3">"Senior Technical Business Analyst (Architect Level)"</p>
-            <p class="font-bold">- Anonymous Client</p>
+            <p class="text-lg italic mb-1">"I liked that Sivan was able to deliver the work on time, as promised. Also, his feedback on my resume were spot on."</p>
           </div>
           <div class="testimonial-slide hidden">
-            <p class="text-lg italic mb-3">"Sivan is an excellent product manager, product leader and team member. He cares passionately about delighting customers and is highly capable at all levels from strategic direction to writing detailed…"</p>
-            <p class="font-bold">- Business Analyst / Product Manager, Financial Analysis</p>
-          </div>
-          <div class="testimonial-slide hidden">
-            <p class="text-lg italic mb-3">"I liked that Sivan was able to deliver the work on time, as promised. Also, his feedback on my resume were spot on."</p>
-            <p class="font-bold">- Resume Review Client</p>
-          </div>
-          <div class="testimonial-slide hidden">
-            <p class="text-lg italic mb-3">"He was extremely professional and understands product management extremely well. I had excellent work done by him and I will be going back to him for more."</p>
-            <p class="font-bold">- Product Management Case Study Client</p>
+            <p class="text-lg italic mb-1">"He was extremely professional and understands product management extremely well. I had excellent work done by him and I will be going back to him for more."</p>
           </div>
 
           <!-- Arrows -->
