--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="flex flex-col md:flex-row items-center gap-12 mb-12">
           <div class="md:w-1/2">
-            <h3 class="text-2xl font-bold mb-2"><span class="accent-gold"> Building a Data-Driven Strategy</span></h3>
+            <h3 class="text-2xl font-bold mb-2"><span class="accent-gold"> 1. Building a Data-Driven Strategy</span></h3>
             <p class="text-gray-600">We start with deep diagnosis of your market, competitors, and data, and build a roadmap explicitly tied to ARR/LTV.</p>
           </div>
           <div class="md:w-1/2">
@@ -110,7 +110,7 @@
         </div>
         <div class="flex flex-col md:flex-row-reverse items-center gap-12 mb-12">
           <div class="md:w-1/2">
-            <h3 class="text-2xl font-bold mb-2"><span class="accent-gold"> Lead Execution & Implement Process</span></h3>
+            <h3 class="text-2xl font-bold mb-2"><span class="accent-gold"> 2. Lead Execution & Implement Process</span></h3>
             <p class="text-gray-600">I run key product rituals, mentor the team, and implement lean Agile to ship faster with higher quality.</p>
           </div>
           <div class="md:w-1/2">
@@ -119,7 +119,7 @@
         </div>
         <div class="flex flex-col md:flex-row items-center gap-12">
           <div class="md:w-1/2">
-            <h3 class="text-2xl font-bold mb-2"><span class="accent-gold"> Accountability for Results</span></h3>
+            <h3 class="text-2xl font-bold mb-2"><span class="accent-gold"> 1. Accountability for Results</span></h3>
             <p class="text-gray-600">We set clear KPI targets together; I’m accountable for hitting them—churn down, conversion up, CSAT up.</p>
           </div>
           <div class="md:w-1/2">
