--- a/hipo2.html
+++ b/hipo2.html
@@ -1,3 +1,6 @@
+My apologies for the incomplete response. The "If you have" was the beginning of the final call to action. Here is the complete, finished HTML code for the infographic.
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,9 +74,12 @@
             justify-content: space-around;
             text-align: center;
             margin-bottom: 30px;
+            flex-wrap: wrap;
+            gap: 20px;
         }
         .metric {
             flex-basis: 30%;
+            min-width: 120px;
         }
         .metric .value {
             font-size: 2.5em;
@@ -91,11 +97,13 @@
             align-items: center;
             gap: 15px;
             margin: 30px 0;
+            flex-wrap: wrap;
         }
         .flow-item {
             text-align: center;
             font-size: 0.9em;
             color: #5a7184;
+            flex-basis: 100px;
         }
          .flow-item .icon-flow {
             width: 60px;
@@ -152,13 +160,14 @@
         .footer p {
             margin: 0 0 15px 0;
             opacity: 0.9;
+            font-size: 1.1em;
         }
         .footer a {
             color: #ffffff;
             text-decoration: none;
             font-weight: 600;
             background-color: #2a9d8f;
-            padding: 10px 20px;
+            padding: 12px 25px;
             border-radius: 25px;
             transition: background-color 0.3s;
         }
@@ -241,4 +250,11 @@
         </section>
 
         <footer class="footer">
-            <p>If you have
+            <p>If you are passionate about using technology to solve this massive problem, I would love to talk.</p>
+            <a href="mailto:your-email@example.com">Let's Connect</a>
+        </footer>
+    </div>
+
+</body>
+</html>
+```
