--- a/hipo2.html
+++ b/hipo2.html
@@ -1,6 +1,3 @@
-My apologies for the incomplete response. The "If you have" was the beginning of the final call to action. Here is the complete, finished HTML code for the infographic.
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -251,10 +248,9 @@ My apologies for the incomplete response. The "If you have" was the beginning of
 
         <footer class="footer">
             <p>If you are passionate about using technology to solve this massive problem, I would love to talk.</p>
-            <a href="mailto:your-email@example.com">Let's Connect</a>
+            <a href="mailto:your-sivan@vizoxltd.com">Let's Connect</a>
         </footer>
     </div>
 
 </body>
 </html>
-```
