--- a/hipo2.html
+++ b/hipo2.html
@@ -248,7 +248,7 @@
 
         <footer class="footer">
             <p>If you are passionate about using technology to solve this massive problem, I would love to talk.</p>
-            <a href="mailto:your-sivan@vizoxltd.com">Let's Connect</a>
+            <a href="mailto:sivan@vizoxltd.com">Let's Connect</a>
         </footer>
     </div>
 
