--- a/hipo2.html
+++ b/hipo2.html
@@ -114,8 +114,12 @@
             border: 2px solid #a5d6a7;
         }
         .arrow {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 2em;
             color: #a5d6a7;
+            height: 60px;
         }
         .opportunity {
             background-color: #e6f7ff;
@@ -248,7 +252,7 @@
 
         <footer class="footer">
             <p>If you are passionate about using technology to solve this massive problem, I would love to talk.</p>
-            <a href="mailto:sivan@vizoxltd.com">Let's Connect</a>
+            <a href="mailto:sivan@vizoxltd.com?subject=Co-Founder%20Application&body=Hi%20Sivan,">Let's Connect</a>
         </footer>
     </div>
 
