--- a/hipo2.html
+++ b/hipo2.html
@@ -242,7 +242,7 @@
 
         <section class="section opportunity">
              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#005f99"><path d="M19.7,7.34a.99.99,0,0,0-1.4,0L13.5,12.14,11.91,10a1,1,0,0,0-1.56,1.25l2.44,4a1,1,0,0,0,1.62-.06l5.35-6.23A1,1,0,0,0,19.7,7.34ZM10,12a1,1,0,1,0-1-1A1,1,0,0,0,10,12Zm0,5a1,1,0,1,0,1,1A1,1,0,0,0,10,17Zm0-10a1,1,0,1,0,1,1A1,1,0,0,0,10,7Zm11,5a9,9,0,1,1-9-9A9,9,0,0,1,21,12Zm-2,0a7,7,0,1,0-7,7A7,7,0,0,0,19,12Z"/></svg>
-            <h2>The Opportunity: Build the Brains of the Operation</h2>
+            <h2>The Opportunity: Build the Brains of the Operation----</h2>
             <p>I am looking for an expert to be more than an advisor. I'm seeking a true partner to embed deep accounting and tax logic into the very core of our product. Your expertise will define our competitive advantage and build the trust our users need.</p>
             <div class="equity-box">
                 <div class="title">You are the Design Partner & Co-Founder</div>
