--- a/hipo2.html
+++ b/hipo2.html
@@ -13,7 +13,6 @@
             --brand-mid: #213c54;
             --brand-accent: #2a9d8f;
             --muted: #5a7184;
-            --ring: #a5d6a7;
         }
         * { box-sizing: border-box; }
         body {
@@ -56,14 +55,11 @@
         .section { padding: 40px 30px; border-bottom: 1px solid #e0e6ec; }
         .section:last-child { border-bottom: none; }
         .section h2 { font-size: 1.8em; font-weight: 600; margin: 0 0 25px; color: #1a3b5a; text-align: center; }
-        .section .icon { display: block; margin: 0 auto 15px auto; width: 50px; height: 50px; }
         .metrics { display: flex; justify-content: space-around; text-align: center; margin-bottom: 30px; flex-wrap: wrap; gap: 20px; }
         .metric { flex-basis: 30%; min-width: 120px; }
         .metric .value { font-size: 2.5em; font-weight: 700; color: var(--brand-accent); }
         .metric .label { font-size: 0.9em; color: var(--muted); line-height: 1.4; }
-
-        /* FLOW: icons + arrows rendered purely with inline SVG, consistent sizing */
-        .flow-diagram {
+        .flow-text {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -71,45 +67,21 @@
             margin: 30px auto;
             flex-wrap: wrap;
             max-width: 680px;
+            font-size: 1em;
+            color: var(--muted);
         }
-        .flow-step, .arrow-wrap {
-            width: 140px; /* equal footprint so layout is predictable */
-            height: 120px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-        .badge {
-            width: 64px; height: 64px;
-            border-radius: 50%;
-            border: 2px solid var(--ring);
-            background: #f5fff6;
-            display: grid; place-items: center;
-            margin-bottom: 10px;
-        }
-        .badge svg { width: 28px; height: 28px; stroke: var(--brand-accent); fill: none; stroke-width: 2; }
-        .flow-label { font-size: 0.92em; color: var(--muted); line-height: 1.3; }
-        .arrow-wrap svg { width: 32px; height: 32px; stroke: var(--ring); fill: none; stroke-width: 2.5; }
-
+        .flow-step { font-weight: 500; text-align: center; }
+        .arrow { font-size: 1.5em; color: var(--brand-accent); }
         .opportunity { background-color: #e6f7ff; text-align: center; }
         .opportunity h2 { color: #005f99; }
         .opportunity p { font-size: 1.1em; line-height: 1.6; max-width: 600px; margin: 0 auto 20px auto; }
         .equity-box { background-color: #ffffff; border: 2px dashed #005f99; padding: 20px; border-radius: 12px; display: inline-block; }
         .equity-box .title { font-size: 1.2em; font-weight: 600; color: #005f99; margin: 0 0 5px 0; }
         .equity-box .desc { font-size: 1em; color: #333; margin: 0; }
-
         .footer { background-color: var(--brand-dark); color: #ffffff; text-align: center; padding: 30px; }
         .footer p { margin: 0 0 15px 0; opacity: 0.95; font-size: 1.1em; }
         .footer a { color: #ffffff; text-decoration: none; font-weight: 600; background-color: var(--brand-accent); padding: 12px 25px; border-radius: 25px; transition: transform .15s ease; display: inline-block; }
         .footer a:hover { transform: translateY(-1px); }
-
-        @media (max-width: 720px) {
-            .section { padding: 28px 20px; }
-            .metrics { flex-direction: column; align-items: center; }
-            .flow-step, .arrow-wrap { width: 45%; height: 110px; }
-        }
     </style>
 </head>
 <body>
@@ -120,7 +92,6 @@
         </header>
 
         <section class="section">
-            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/></svg>
             <h2>The Problem: An Exploding Market in Financial Chaos</h2>
             <div class="metrics">
                 <div class="metric">
@@ -140,60 +111,21 @@
         </section>
 
         <section class="section">
-            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 3v18M3 12h18"/></svg>
             <h2>The Vision: The Financial OS for Modern Independents</h2>
             <p style="text-align: center; max-width: 650px; margin: 0 auto 30px auto;">We're not building another tax tool. We're creating an intelligent, automated system that gives freelancers true financial peace of mind. A single platform that manages their entire financial workflow, making tax compliance a natural, stress-free byproduct.</p>
 
-            <div class="flow-diagram">
-                <!-- Step 1 -->
-                <div class="flow-step">
-                    <div class="badge" aria-hidden="true">
-                        <!-- square icon -->
-                        <svg viewBox="0 0 24 24" role="img"><rect x="6" y="6" width="12" height="12" rx="1.5"/></svg>
-                    </div>
-                    <div class="flow-label">Track Income &amp; Expenses</div>
-                </div>
-                <!-- Arrow -->
-                <div class="arrow-wrap" aria-hidden="true">
-                    <svg viewBox="0 0 24 24"><path d="M4 12h14M13 6l6 6-6 6"/></svg>
-                </div>
-                <!-- Step 2 -->
-                <div class="flow-step">
-                    <div class="badge" aria-hidden="true">
-                        <!-- spark icon -->
-                        <svg viewBox="0 0 24 24"><path d="M12 3l2.5 6.5L21 12l-6.5 2.5L12 21l-2.5-6.5L3 12l6.5-2.5L12 3z"/></svg>
-                    </div>
-                    <div class="flow-label">AI-Powered Deductions</div>
-                </div>
-                <!-- Arrow -->
-                <div class="arrow-wrap" aria-hidden="true">
-                    <svg viewBox="0 0 24 24"><path d="M4 12h14M13 6l6 6-6 6"/></svg>
-                </div>
-                <!-- Step 3 -->
-                <div class="flow-step">
-                    <div class="badge" aria-hidden="true">
-                        <!-- info icon -->
-                        <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="9"/><path d="M12 10v6M12 8h.01"/></svg>
-                    </div>
-                    <div class="flow-label">Automate Tax Set-Aside</div>
-                </div>
-                <!-- Arrow -->
-                <div class="arrow-wrap" aria-hidden="true">
-                    <svg viewBox="0 0 24 24"><path d="M4 12h14M13 6l6 6-6 6"/></svg>
-                </div>
-                <!-- Step 4 -->
-                <div class="flow-step">
-                    <div class="badge" aria-hidden="true">
-                        <!-- diamond icon -->
-                        <svg viewBox="0 0 24 24"><path d="M12 3l8 9-8 9-8-9 8-9z"/></svg>
-                    </div>
-                    <div class="flow-label">Pay IRS in 1‑Click</div>
-                </div>
+            <div class="flow-text">
+                <div class="flow-step">Track Income &amp; Expenses</div>
+                <div class="arrow">→</div>
+                <div class="flow-step">AI-Powered Deductions</div>
+                <div class="arrow">→</div>
+                <div class="flow-step">Automate Tax Set-Aside</div>
+                <div class="arrow">→</div>
+                <div class="flow-step">Pay IRS in 1‑Click</div>
             </div>
         </section>
 
         <section class="section opportunity">
-            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#005f99" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M8 12l3 3 5-6"/></svg>
             <h2>The Opportunity: Build the Brains of the Operation</h2>
             <p>I am looking for an expert to be more than an advisor. I'm seeking a true partner to embed deep accounting and tax logic into the very core of our product. Your expertise will define our competitive advantage and build the trust our users need.</p>
             <div class="equity-box">
