--- a/hipo2.html
+++ b/hipo2.html
@@ -63,15 +63,70 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 12px;
-            margin: 30px auto;
+            gap: 16px;
+            margin: 24px auto 8px;
             flex-wrap: wrap;
-            max-width: 680px;
-            font-size: 1em;
+            max-width: 720px;
+            font-size: 1rem;
             color: var(--muted);
         }
-        .flow-step { font-weight: 500; text-align: center; }
-        .arrow { font-size: 1.5em; color: var(--brand-accent); }
+        .flow-step { 
+            font-weight: 500; 
+            text-align: center; 
+        }
+        .arrow { 
+            font-size: 1.5rem; 
+            color: var(--brand-accent); 
+            line-height: 1; 
+        }
+
+        /* Mobile-first optimizations */
+        @media (max-width: 720px) {
+            .header { padding: 36px 18px; }
+            .header h1 { font-size: 1.8rem; }
+            .header p { font-size: 0.95rem; }
+            .section { padding: 24px 18px; }
+            .metrics { gap: 12px; }
+            .metric { flex-basis: 100%; }
+            .metric .value { font-size: 2rem; }
+
+            /* Flow becomes a vertical checklist */
+            .flow-text { 
+                flex-direction: column; 
+                align-items: stretch; 
+                gap: 0; 
+                max-width: 520px; 
+            }
+            .arrow { display: none; }
+            .flow-step { 
+                text-align: left; 
+                background: #f7faf9; 
+                border: 1px solid #e6efe9; 
+                border-radius: 10px; 
+                padding: 12px 14px; 
+                margin-bottom: 10px; 
+                position: relative; 
+            }
+            .flow-step::before {
+                content: '•';
+                position: absolute; 
+                left: 10px; 
+                top: 50%; 
+                transform: translateY(-50%);
+                color: var(--brand-accent);
+                font-size: 1.2rem;
+            }
+            .flow-step { padding-left: 28px; }
+        }
+
+        @media (max-width: 480px) {
+            .header h1 { font-size: 1.6rem; }
+            .header p { font-size: 0.9rem; }
+            .metric .value { font-size: 1.7rem; }
+            .equity-box { display: block; }
+            .footer p { font-size: 1rem; }
+            .footer a { display: block; margin: 10px auto 0; }
+        }
         .opportunity { background-color: #e6f7ff; text-align: center; }
         .opportunity h2 { color: #005f99; }
         .opportunity p { font-size: 1.1em; line-height: 1.6; max-width: 600px; margin: 0 auto 20px auto; }
