--- a/hipo3.html
+++ b/hipo3.html
@@ -20,16 +20,17 @@
     .accent-gold { color: #B48F00; }
     .btn-gold { background-color: #B48F00; transition: background-color .3s ease; }
     .btn-gold:hover { background-color: #9c7a00; }
+
     .faq-question.open .faq-answer { max-height: 200px; padding-top: 1rem; padding-bottom: 1rem; }
     .faq-question .faq-answer { max-height: 0; overflow: hidden; transition: max-height .35s ease, padding .35s ease; }
     .faq-question.open .plus { display:none; }
     .faq-question:not(.open) .minus { display:none; }
-    /* Sticky CTA */
+
     .sticky-cta { position: sticky; bottom: 0; z-index: 40; }
   </style>
 </head>
 <body class="bg-white text-gray-800">
-  <!-- Top notice + subtle urgency -->
+  <!-- Top notice / subtle urgency -->
   <div class="bg-amber-50 text-amber-900 text-sm">
     <div class="container mx-auto px-6 py-2 text-center">
       I work with up to 3 clients in parallel. <span class="font-semibold">1 slot currently open.</span>
@@ -49,23 +50,51 @@
           </p>
 
           <!-- Short lead form -->
-          <form id="lead-form" class="bg-white/70 backdrop-blur rounded-xl border border-gray-200 p-4 md:p-5 shadow-sm mb-4">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
-              <input type="text" name="name" required placeholder="Your name" class="w-full rounded-lg border-gray-300 focus:border-amber-400 focus:ring-amber-400">
-              <input type="email" name="email" required placeholder="Work email" class="w-full rounded-lg border-gray-300 focus:border-amber-400 focus:ring-amber-400">
-              <input type="text" name="challenge" placeholder="Biggest product challenge" class="w-full rounded-lg border-gray-300 focus:border-amber-400 focus:ring-amber-400 md:col-span-1">
+          <form id="lead-form" class="bg-white/80 backdrop-blur rounded-2xl border border-gray-200 p-5 md:p-6 shadow-md" aria-label="Lead form">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+              <label class="block">
+                <span class="sr-only">Your name</span>
+                <input
+                  type="text" name="name" required
+                  placeholder="Your name"
+                  class="w-full h-12 rounded-lg border border-gray-300 px-4 text-gray-900 placeholder-gray-400
+                         focus:outline-none focus:ring-2 focus:ring-amber-400 focus:border-amber-400 transition" />
+              </label>
+
+              <label class="block">
+                <span class="sr-only">Work email</span>
+                <input
+                  type="email" name="email" required
+                  placeholder="Work email"
+                  class="w-full h-12 rounded-lg border border-gray-300 px-4 text-gray-900 placeholder-gray-400
+                         focus:outline-none focus:ring-2 focus:ring-amber-400 focus:border-amber-400 transition" />
+              </label>
+
+              <label class="block md:col-span-1">
+                <span class="sr-only">Biggest product challenge</span>
+                <input
+                  type="text" name="challenge"
+                  placeholder="Biggest product challenge"
+                  class="w-full h-12 rounded-lg border border-gray-300 px-4 text-gray-900 placeholder-gray-400
+                         focus:outline-none focus:ring-2 focus:ring-amber-400 focus:border-amber-400 transition" />
+              </label>
             </div>
-            <div class="mt-3 flex flex-col sm:flex-row items-center gap-3">
-              <button type="submit" class="btn-gold text-white font-bold py-3 px-6 rounded-lg w-full sm:w-auto">
+
+            <div class="mt-4 flex flex-col sm:flex-row items-center gap-3">
+              <button type="submit"
+                class="btn-gold text-white font-bold py-3 px-6 rounded-lg w-full sm:w-auto shadow hover:shadow-md">
                 Book a No-Obligation Strategy Call
               </button>
-              <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener" class="underline text-sm">
+
+              <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener"
+                 class="underline text-sm text-gray-700 hover:text-gray-900">
                 Prefer to jump straight to my calendar?
               </a>
             </div>
+            <p class="mt-3 text-xs text-gray-500">No spam. I reply within 24 hours.</p>
           </form>
 
-          <p class="text-sm text-gray-500">
+          <p class="text-sm text-gray-500 mt-3">
             Led 300+ people orgs. Launched products generating $100M+. ISO and PCI compliant environments.
           </p>
         </div>
@@ -79,17 +108,29 @@
   </header>
 
   <main>
-    <!-- Social proof logos -->
+    <!-- Wordmark logos -->
     <section class="py-10 bg-white">
       <div class="container mx-auto px-6">
-        <p class="text-center text-gray-500 text-sm mb-4">Trusted by SaaS teams and founders</p>
-        <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-6 gap-6 opacity-70">
-          <div class="h-10 bg-gray-100 rounded"></div>
-          <div class="h-10 bg-gray-100 rounded"></div>
-          <div class="h-10 bg-gray-100 rounded"></div>
-          <div class="h-10 bg-gray-100 rounded"></div>
-          <div class="h-10 bg-gray-100 rounded"></div>
-          <div class="h-10 bg-gray-100 rounded"></div>
+        <p class="text-center text-gray-500 text-sm mb-6">Trusted by founders & SaaS teams</p>
+        <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-6 text-center">
+          <div class="flex items-center justify-center bg-gradient-to-r from-amber-100 to-amber-50 rounded-lg shadow-sm p-3">
+            <span class="font-black text-lg text-gray-800 tracking-wider">Touch<span class="text-amber-600">Stay</span></span>
+          </div>
+          <div class="flex items-center justify-center bg-gradient-to-r from-sky-100 to-sky-50 rounded-lg shadow-sm p-3">
+            <span class="font-black text-lg text-gray-800 tracking-wider">LIVV</span>
+          </div>
+          <div class="flex items-center justify-center bg-gradient-to-r from-green-100 to-green-50 rounded-lg shadow-sm p-3">
+            <span class="font-black text-lg text-gray-800 tracking-wider">Tick<span class="text-green-600">Tech</span></span>
+          </div>
+          <div class="flex items-center justify-center bg-gradient-to-r from-indigo-100 to-indigo-50 rounded-lg shadow-sm p-3">
+            <span class="font-black text-lg text-gray-800 tracking-wider">Naxex</span>
+          </div>
+          <div class="flex items-center justify-center bg-gradient-to-r from-purple-100 to-purple-50 rounded-lg shadow-sm p-3">
+            <span class="font-black text-lg text-gray-800 tracking-wider">Trade<span class="text-purple-600">Networks</span></span>
+          </div>
+          <div class="flex items-center justify-center bg-gradient-to-r from-red-100 to-red-50 rounded-lg shadow-sm p-3">
+            <span class="font-black text-lg text-gray-800 tracking-wider">FX<span class="text-red-600">Solutions</span></span>
+          </div>
         </div>
       </div>
     </section>
@@ -301,20 +342,18 @@
     </div>
   </footer>
 
-  <!-- Sticky CTA (visible on scroll) -->
+  <!-- Sticky CTA -->
   <div class="sticky-cta bg-white/90 backdrop-blur border-t border-gray-200">
     <div class="container mx-auto px-6 py-3 flex items-center justify-between gap-3">
       <p class="text-sm text-gray-600 truncate">Turn your roadmap into a growth engine.</p>
       <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener"
-         class="btn-gold text-white font-semibold py-2 px-4 rounded-lg">
-        Book a Call
-      </a>
+         class="btn-gold text-white font-semibold py-2 px-4 rounded-lg">Book a Call</a>
     </div>
   </div>
 
   <!-- Scripts -->
   <script>
-    // Lead form: fall back to Cal.com with prefilled query
+    // Lead form: open Cal.com with prefilled query
     document.getElementById('lead-form')?.addEventListener('submit', function(e){
       e.preventDefault();
       const fd = new FormData(this);
@@ -325,7 +364,7 @@
       window.open(url, '_blank', 'noopener');
     });
 
-    // FAQ toggles
+    // FAQ toggles (one open at a time)
     document.querySelectorAll('.faq-question').forEach(item => {
       item.addEventListener('click', () => {
         document.querySelectorAll('.faq-question.open').forEach(openItem => {
