--- a/hipo3.html
+++ b/hipo3.html
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="mt-8 sm:mt-10">
-        <a href="#cta" class="inline-block btn-gold text-white font-bold py-3 px-6 sm:py-3 sm:px-8 rounded-lg">Solve It Now</a>
+        <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener" class="inline-block btn-gold text-white font-bold py-3 px-6 sm:py-3 sm:px-8 rounded-lg">Solve It Now</a>
       </div>
     </div>
   </section>
@@ -158,7 +158,7 @@
     <div class="container mx-auto px-4 sm:px-6 text-center">
       <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-10 sm:mb-12">The Experience That Makes the Difference.</h2>
 
-      <div class="grid grid-cols-3 md:grid-cols-3 gap-6 sm:gap-8 mb-10 sm:mb-12">
+      <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 sm:gap-8 mb-10 sm:mb-12">
         <div><p class="text-4xl sm:text-5xl font-black accent-gold">16+</p><p class="text-base sm:text-lg">Years in Product Leadership</p></div>
         <div><p class="text-4xl sm:text-5xl font-black accent-gold">$100M+</p><p class="text-base sm:text-lg">Revenue from Launched Products</p></div>
         <div><p class="text-4xl sm:text-5xl font-black accent-gold">300+</p><p class="text-base sm:text-lg">People Led</p></div>
@@ -180,7 +180,7 @@
       </div>
 
       <div class="mt-8 sm:mt-10">
-        <a href="#cta" class="inline-block btn-gold text-white font-bold py-3 px-6 sm:py-3 sm:px-8 rounded-lg">Let's Talk</a>
+        <a href="https://cal.com/nxtgenpms/discovery-call" class="inline-block btn-gold text-white font-bold py-3 px-6 sm:py-3 sm:px-8 rounded-lg" target="_blank" rel="noopener">Let's Talk</a>
       </div>
     </div>
   </section>
@@ -256,7 +256,6 @@
       <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener" class="inline-block btn-gold text-white font-bold py-3 sm:py-4 px-8 rounded-lg text-lg shadow-lg">
         Schedule Your Strategy Call Now
       </a>
-      <p class="mt-4 text-xs sm:text-sm text-white/80">Prefer email? <a href="mailto:sivsiv@gmail.com?subject=Fractional%20CPO%20Discovery%20Call&body=Hi%20Sivan%2C%20I'd%20like%20to%20book%20a%20discovery%20call.%0A%0AName%3A%0ACompany%3A%0ABiggest%20challenge%3A" class="underline">Email me</a></p>
     </div>
   </section>
 
@@ -269,7 +268,7 @@
 
   <div class="sticky-cta bg-white/90 backdrop-blur border-t border-gray-200">
     <div class="container mx-auto px-4 sm:px-6 py-2.5 sm:py-3 flex items-center justify-between gap-3">
-      <p class="text-xs sm:text-sm text-gray-600 truncate">Turn your roadmap into a growth engine.</p>
+      <p class="text-sm sm:text-base font-semibold text-gray-700 truncate">Turn your roadmap into a growth engine.</p>
       <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener" class="btn-gold text-white font-semibold py-2 px-4 rounded-lg">Book a Call</a>
     </div>
   </div>
