--- a/hipo3.html
+++ b/hipo3.html
@@ -60,7 +60,7 @@
   <!-- Wordmark logos (monochrome) -->
   <section class="py-8 sm:py-10 bg-white">
     <div class="container mx-auto px-4 sm:px-6">
-      <p class="text-center text-gray-500 text-xs sm:text-sm mb-4 sm:mb-6">Trusted by founders & SaaS teams</p>
+      <p class="text-center text-gray-500 text-sm sm:text-base md:text-lg mb-4 sm:mb-6 font-medium">Trusted by founders & SaaS teams</p>
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-4 sm:gap-6 text-center">
         <div class="flex items-center justify-center bg-white border border-gray-200 rounded-lg shadow-sm p-2 sm:p-3">
           <span class="font-black text-base sm:text-lg text-gray-800 tracking-wider">TOUCH<span class="text-gray-600">STAY</span></span>
@@ -267,9 +267,9 @@
   </footer>
 
   <div class="sticky-cta bg-white/90 backdrop-blur border-t border-gray-200">
-    <div class="container mx-auto px-4 sm:px-6 py-2.5 sm:py-3 flex items-center justify-between gap-3">
-      <p class="text-sm sm:text-base font-semibold text-gray-700 truncate">Turn your roadmap into a growth engine.</p>
-      <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener" class="btn-gold text-white font-semibold py-2 px-4 rounded-lg">Book a Call</a>
+    <div class="container mx-auto px-4 sm:px-6 py-2.5 sm:py-3 flex flex-col sm:flex-row items-center sm:justify-between gap-2 sm:gap-3">
+      <p class="text-sm sm:text-base font-semibold text-gray-700 text-center sm:text-left leading-snug">Turn your roadmap into a growth engine.</p>
+      <a href="https://cal.com/nxtgenpms/discovery-call" target="_blank" rel="noopener" class="btn-gold text-white font-semibold py-2 px-5 rounded-lg w-full sm:w-auto">Book a Call</a>
     </div>
   </div>
 
